Fixed exhibition creation and added JUnit test.